--- a/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
+++ b/EnhancedNativeTrainer/EnhancedNativeTrainer.vcxproj.filters
@@ -94,6 +94,7 @@
     <ClCompile Include="src\features\world.cpp">
       <Filter>Source Files\features</Filter>
     </ClCompile>
+    <ClCompile Include="src\features\tiresmokemenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\version.h">
